--- a/package.json
+++ b/package.json
@@ -21,9 +21,9 @@
     "reselect": "^4.1.5"
   },
   "scripts": {
-    "start": "webpack-dev-server --open --mode development --hot",
-    "build": "webpack --mode production",
-    "postprod": "cpx \"public/*\" dist",
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "serve": "serve -s build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
@@ -50,13 +50,7 @@
     "@babel/preset-env": "^7.18.2",
     "@babel/preset-react": "^7.17.12",
     "babel-loader": "^8.2.5",
-    "copy-webpack-plugin": "^11.0.0",
-    "cpx": "^1.5.0",
-    "html-webpack-plugin": "^5.5.0",
     "ts-loader": "^9.3.0",
-    "typescript": "^4.7.2",
-    "webpack": "^5.73.0",
-    "webpack-cli": "^4.9.2",
-    "webpack-dev-server": "^4.9.1"
+    "typescript": "^4.7.2"
   }
 }
