--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
     "@types/react-redux": "7.1.19",
     "@types/react-router-dom": "5.3.1",
     "axios": "^0.27.2",
+    "bootstrap": "^5.1.3",
     "immutable": "^4.1.0",
     "react": "^18.1.0",
+    "react-bootstrap": "^2.4.0",
     "react-dom": "^18.1.0",
     "react-redux": "^8.0.2",
     "react-router": "^6.3.0",
@@ -21,7 +23,7 @@
     "reselect": "^4.1.5"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "dev": "react-scripts start",
     "build": "react-scripts build",
     "serve": "serve -s build"
   },
